[project]
name = "perplexity-webui-scraper"
version = "0.3.2"
description = "An unofficial Python client library for interacting with Perplexity AI through its web interface."
readme = "README.md"
authors = [
    { name = "henrique-coder", email = "henriquemoreira10fk@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "curl-cffi>=0.13.0",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
lint = [
    "ruff>=0.14.8",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
